Some refactoring using ChatGPT for Software Quality Course